# do_an

./: AI_GRADING_IELTS_GUIDE.md  AI_GRADING_MULTI_TASK_DISPLAY.md  AI_GRADING_PERSISTENCE.md  AI_GRADING_README.md  AI_GRADING_SUMMARY.md  AI_GRADING_TASK_DIFFERENTIATION.md  CKEDITOR_README.md  FRONTEND_GRADING_INTEGRATION.md  HUONG-DAN-TAO-DE-THI-AI.md  HUONG_DAN_XEM_CHI_TIET_TASK.md  PAYMENT_PACKAGES_GUIDE.md  PAYOS_INTEGRATION.md  PROMPTS_REFACTORING_COMPLETE.md  PROMPTS_REFACTORING_SUMMARY.md  SETUP_GUIDE.md  TROUBLESHOOTING_PAYMENT_HISTORY.md  WRITING_SPEAKING_UI_README.md  example-ielts-reading-payload.json
FastAPI-Service/: .env.example  .gitignore  LARAVEL_REPLACEMENT.md  QUICKSTART.md  QUICKSTART_NEW.md  README.md  REFACTOR_COMPLETE.md  alembic.ini  check_ai_config.py  check_payment_data.py  create_sample_payments.py  fix_migration.py  pyproject.toml  run.py  test_grading_demo.py  test_payment_query.py  test_prompts_refactoring.py  test_wallet_transaction.py
FastAPI-Service/alembic/: env.py
FastAPI-Service/alembic/versions/: 0f17275325f2_create_auth_and_permission_tables.py  122454124bd7_create_payment_packages_table.py  694e4792bac0_create_exam_tables.py  a1b2c3d4e5f6_add_is_online_to_exam_skills.py  ce52f0462e3b_remove_permissions_system.py  f129b2aa3191_create_wallet_transactions_table.py  f1a2b3c4d5e6_create_user_exam_submissions_tables.py  g7h8i9j0k1l2_create_payment_and_wallet_tables.py  j3k4l5m6n7o8_create_ai_grading_config_table.py
FastAPI-Service/app/: __init__.py  auth.py  config.py  database.py  main.py
FastAPI-Service/app/models/: __init__.py  auth_models.py  base.py  exam_models.py  payment_models.py  user.py
FastAPI-Service/uploads/: .gitignore
(+152 files in other folders)
